# GlacierCastAI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: model.yaml
experiments/: README.md
scripts/: build_sequences.py  download_aletsch.py  download_dem.py  download_era5_all.py  download_glaciers.py  download_landsat_all.py  download_rgi.py  evaluate.py  plot_climate.py  plot_retreat.py  preprocess_glaciers.py  search_landsat.py  sweep.py  train.py
src/data/augmentation/: geo_augment.py
src/data/downloaders/: dem.py  era5.py  landsat.py  sentinel2.py
src/data/preprocessing/: cloud_mask.py  coregister.py  patch_extractor.py
src/evaluation/: metrics.py
src/explainability/: attribution.py
src/models/: glaciercastai.py
src/models/backbones/: encoder.py
src/models/heads/: decoder.py  regression.py
src/models/losses/: combined_loss.py
src/models/temporal/: convlstm.py  transformer.py
src/training/: datamodule.py  trainer.py
tests/: test_augmentation.py  test_metrics.py
