[project]
name = "glaciercastai"
version = "0.1.0"
description = "Predictive modeling of glacier retreat using multi-temporal satellite imagery"
authors = [
    {name = "Arunkumar Ramachandran"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.12.0,<3.0.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "torchvision (>=0.27.0,<0.28.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "pytorch-lightning (>=2.6.5,<3.0.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "einops (>=0.8.2,<0.9.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "timm (>=1.0.27,<2.0.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "segmentation-models-pytorch (>=0.5.0,<0.6.0) ; python_version >= \"3.11\" and python_full_version < \"3.14.1\"",
    "rasterio (>=1.5.0,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "geopandas (>=1.1.3,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "shapely (>=2.1.2,<3.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "pyproj (>=3.7.2,<4.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "gdal (>=3.13.1,<4.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "numpy (>=2.4.6,<3.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "scipy (>=1.17.1,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "pandas (>=3.0.3,<4.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "xarray (>=2026.4.0,<2027.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "netcdf4 (>=1.7.4,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "h5py (>=3.16.0,<4.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "wandb (>=0.27.2,<0.28.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "optuna (>=4.9.0,<5.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "shap (>=0.52.0,<0.53.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "captum (>=0.9.0,<0.10.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "albumentations (>=2.0.8,<3.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "torchgeo (>=0.9.0,<0.10.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "cdsapi (>=0.7.7,<0.8.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "eccodes (>=2.47.0,<3.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "tqdm (>=4.68.1,<5.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "pyyaml (>=6.0.3,<7.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "jupyter (>=1.1.1,<2.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "ipykernel (>=7.2.0,<8.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "cartopy (>=0.25.0,<0.26.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "matplotlib (>=3.10.9,<4.0.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\"",
    "seaborn (>=0.13.2,<0.14.0) ; python_version >= \"3.12\" and python_full_version < \"3.14.1\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^9.0.3", python = ">=3.12,<3.14.1"}
black = {version = "^26.5.1", python = ">=3.12,<3.14.1"}
isort = {version = "^8.0.1", python = ">=3.12,<3.14.1"}
ruff = {version = "^0.15.16", python = ">=3.12,<3.14.1"}

